ci: use Redis v7.4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        redis: [6.2]
+        redis: [6.2, 7.4]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
@@ -53,6 +53,8 @@ jobs:
       - name: Run tests
         run: |
           deno task test
+        env:
+          REDIS_VERSION: ${{ matrix.redis }}
       - name: Run doc tests
         run: |
           deno task test:doc
@@ -65,7 +67,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        redis: [6.2]
+        redis: [7.4]
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v2
