--- a/deno.json
+++ b/deno.json
@@ -16,7 +16,7 @@
   "tasks": {
     "lock": "rm deno.lock && DENO_FUTURE=1 deno cache --reload mod.ts experimental/**/mod.ts tests/**/*.ts",
     "check:deno-json": "deno run --allow-read=deno.json tools/check_deno_json.js",
-    "test": "DENO_FUTURE=1 deno test --allow-net --allow-read=tests --allow-write=tests/tmp --allow-run=redis-server,redis-cli --coverage=coverage --trace-leaks --frozen-lockfile",
+    "test": "DENO_FUTURE=1 deno test --allow-net --allow-read=tests --allow-write=tests/tmp --allow-run=redis-server,redis-cli --allow-env=REDIS_VERSION --coverage=coverage --trace-leaks --frozen-lockfile",
     "test:doc": "deno check --doc-only --import-map=import_map.test.json README.md experimental/cluster/README.md",
     "coverage": "deno coverage ./coverage --lcov --output=coverage/lcov.info",
     "make_mod": "deno run --allow-read --allow-write --allow-run=deno --check tools/make_mod.ts",
