chore: change the package name to `@db/redis`

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
-  "name": "@TODO/redis",
-  "version": "0.34.0",
+  "name": "@db/redis",
+  "version": "0.35.0",
   "exports": "./mod.ts",
   "exclude": [
     "benchmark/node_modules",
