--- a/deno.json
+++ b/deno.json
@@ -3,8 +3,8 @@
   "version": "0.35.0",
   "exports": {
     ".": "./mod.ts",
-    "experimental/cluster": "./experimental/cluster/mod.ts",
-    "experimental/web-streams-connection": "./experimental/web_streams_connection/mod.ts"
+    "./experimental/cluster": "./experimental/cluster/mod.ts",
+    "./experimental/web-streams-connection": "./experimental/web_streams_connection/mod.ts"
   },
   "exclude": [
     "benchmark/node_modules",
