--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           echo "DENO_VERSION=$(cat .denov)" >> $GITHUB_ENV
       - name: Set up Deno ${{ env.DENO_VERSION }}
-        uses: denoland/setup-deno@main
+        uses: denoland/setup-deno@909cc5acb0fdd60627fb858598759246509fa755 # v2.0.2
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -62,7 +62,7 @@ jobs:
         run: |
           echo "DENO_VERSION=$(cat .denov)" >> $GITHUB_ENV
       - name: Set up Deno ${{ env.DENO_VERSION }}
-        uses: denoland/setup-deno@main
+        uses: denoland/setup-deno@909cc5acb0fdd60627fb858598759246509fa755 # v2.0.2
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
@@ -90,7 +90,7 @@ jobs:
         run: |
           echo "DENO_VERSION=$(cat .denov)" >> $GITHUB_ENV
       - name: Set up Deno ${{ env.DENO_VERSION }}
-        uses: denoland/setup-deno@main
+        uses: denoland/setup-deno@909cc5acb0fdd60627fb858598759246509fa755 # v2.0.2
         with:
           deno-version: ${{ env.DENO_VERSION }}
       - uses: actions/cache@5a3ec84eff668545956fd18022155c47e93e2684 # v4.2.3
