--- a/.github/workflows/lint-actions.yml
+++ b/.github/workflows/lint-actions.yml
@@ -7,12 +7,17 @@ on:
     paths:
       - ".github/**/*.yml"
       - ".github/**/*.yaml"
+      - ".github/aqua-checksums.json"
   pull_request:
     branches:
       - "**"
     paths:
       - ".github/**/*.yml"
       - ".github/**/*.yaml"
+      - ".github/aqua-checksums.json"
+
+env:
+  AQUA_CONFIG: ".github/aqua.yaml"
 
 jobs:
   lint:
@@ -20,6 +25,9 @@ jobs:
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - uses: suzuki-shunsuke/pinact-action@4eb88bc57cde1d55d18615b1f8ccd7216269e6d2 # v0.2.0
+      - uses: aquaproj/aqua-installer@e2d0136abcf70b7a2f6f505720640750557c4b33 # v3.1.1
         with:
-          skip_push: "true"
+          aqua_version: "v2.46.0"
+      - name: Run `pinact run --check`
+        run:
+          pinact run --check
