chore: introduce `jsr:@uki00a/deno-lint-plugin-extra-rules`

--- a/deno.json
+++ b/deno.json
@@ -16,6 +16,7 @@
       "benchmark/benchmark.js",
       "benchmark/ioredis.js"
     ],
+    "plugins": ["jsr:@uki00a/deno-lint-plugin-extra-rules@0.9.0"],
     "rules": { "include": ["no-console"] }
   },
   "test": {
