--- a/deno.json
+++ b/deno.json
@@ -63,11 +63,20 @@
       "dependencies": ["check:lint", "check:deno.json", "typecheck"]
     },
     "check:lint": "deno lint && deno fmt --check",
-    "check:deno.json": "deno run --allow-read=deno.json tools/check_deno_json.js",
+    "check:deno.json": "deno run -R=deno.json --import-map=import_map.dev.json @uki00a/deno-json-lint",
     "typecheck": "cat deno.json | jq '.exports.[]' | xargs deno check",
     "test": "DENO_FUTURE=1 deno test --permission-set --coverage=coverage --trace-leaks --frozen-lockfile",
     "test:doc": "deno check --doc-only --import-map=import_map.test.json README.md experimental/cluster/README.md",
     "bench:deno-redis": "DENO_NO_PACKAGE_JSON=1 deno run --unstable --permission-set=bench:deno-redis --import-map=import_map.dev.json benchmark/deno-redis.ts",
     "bench:ioredis": "node benchmark/ioredis.js"
+  },
+  "deno-json-lint": {
+    "rules": {
+      "no-restricted-fields": ["error", {
+        "fields": {
+          "imports": "Use `import_map.dev.json` instead."
+        }
+      }]
+    }
   }
 }
